scss/apps/_character-generator.scss
@use "../abstracts" as *;
@use "../mixins" as *;

.character-generator {

	h1 {
		font-family: "Old Newspaper Font";
		margin-left: 15px;
		width:350px;
		// font-size: 1.4rem;
	}
	.col1 {
		width:400px;
		float:left;
	}
	.col1a {
		float:left;
		width: 180px;
	}
	.col1b {
		float:left;
		width: 220px;
	}
	.col2 {
		float:left;
		width: 420px;
	}

	button {
		font-size: 1.1rem;
		font-family: "Old Newspaper Font";
	}

	.statcontainer {
		padding-bottom: 5px;
		display: grid;
		grid: auto / auto auto;
	}

	.stats {
		margin-top: 5px;
		margin-bottom: 5px;
		label {
			display:block;
			text-transform: uppercase;
			font-family: "Old Newspaper Font";
			font-weight: bold;
			font-size: 1.1em;
			margin-left: 5px;
		}
		span {
			flex-grow: 1;
			margin-left: 5px;
		}
	}

	.content-link {
		line-height: 1.7;
	}

	.large-style {
		width: 398px;
		height: 475px;
		font-size: 0.85em;
		overflow: auto;
	}

	.small-style {
		width: 70px;
		overflow: auto;
	}

	.box-style {
		border: 1px solid #111;
		margin: 10px;

	  
		.header {
			display:flex;

			label {
				font-size: 1.1rem;
				font-family: "Old Newspaper Font";
				background:#111;
				float:left;
				color:white;
				padding:2px;
				padding-left: 10px;
			}
			a, span {
				background: linear-gradient(90deg, #111 , transparent);
				float:right;
				flex-grow: 1;
				text-align:right;
				vertical-align: middle;
				padding:6px;
			}
		}
		.content {
			display:block;
			padding:5px;
			
			select {
				max-width: 188px;
			}
		}
	  }
}

